fixed issue with bottom alignment

--- a/_css/style.css
+++ b/_css/style.css
@@ -229,7 +229,7 @@ input.btn:hover{
     font-size:0.75em;
 }
 .bottom{
-    margin: 4em 0 1em 0;
+    margin: 4em auto 1em auto;
 }
 #social{
     width:152px;
